<resources>
    <string name="app_name">Guardian_Call</string>
    <string name="button_login">Log In</string>
    <string name="hint_email">Email</string>
    <string name="hint_pw">Password</string>
    <string name="caretaker_and_patient">Caretaker and Patient</string>
    <string name="guardian_call_logo">Guardian call logo</string>
    <string name="sign_in">Sign In</string>
    <string name="first_time_connecting_to_your_device">first time connecting to your device?</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_device_id">Enter Device ID</string>
    <string name="enter_secret_key">Enter Secret Key</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="button_battery_percentage">Button Battery Percentage</string>
    <string name="Buttons">Buttons</string>
    <string name="Alarms">Alarms</string>
    <string name="Button_1">Button 1\n</string>
    <string name="name">Message</string>
    <string name="log_out">Log Out</string>
    <string name="users_registered_for_this_device">Users registered for this device :</string>
    <string name="remove">Remove</string>
    <string name="descriptionAlarm">In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before the final copy is available.</string>
    <string name="device_id">Device ID</string>
    <string name="promptMsg">Give a message that need be send to Guardian Call device...</string>
</resources>