<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background = "@drawable/gradient"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Horizontal Guidelines for left and right padding -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />

        <!-- Vertical Guidelines for top and bottom padding -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_image_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.50" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guideline_image_bottom"
            app:layout_constraintVertical_bias="0.56">

            <!-- Background Image -->
            <ImageView
                android:contentDescription="@string/caretaker_and_patient"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/background"
                android:scaleType="centerCrop" />

            <!-- Transparent Frame -->
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#B01D1B6C" />

            <!-- Image on Top -->
            <ImageView
                android:contentDescription="@string/guardian_call_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="250dp"
                android:paddingRight="10dp"
                android:paddingBottom="20dp"
                android:layout_gravity="center"
                android:src="@drawable/logo_no_background" />
        </FrameLayout>




        <!-- Button with constraints to guidelines and maximum size -->

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="400dp"
            app:layout_constraintTop_toTopOf="@id/guideline_image_bottom"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintWidth_max="400dp">
            <Button
                android:id="@+id/logInButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/rounded_button_auth"
                android:maxWidth="300dp"
                android:maxHeight="100dp"
                android:text="@string/button_login"
                android:textColor="#FFFFFF"

                app:autoSizeMaxTextSize="24sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"

                android:layout_marginTop="270dp"
                app:layout_constraintWidth_max="400dp"
                />

            <EditText
                android:id="@+id/emailsTextView"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/edit_text_background"
                android:drawableEnd="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:hint="@string/hint_email"
                android:autofillHints="emailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"

                android:textColor="#FFFFFF"
                android:textColorHint="@color/whiteTrans"
                android:textSize="20sp"
                android:inputType="textEmailAddress"

                app:autoSizeMaxTextSize="24sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                android:fontFamily="@font/roboto_regular"


                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"

                android:layout_marginTop="90dp"
                app:layout_constraintWidth_max="450dp"/>

            <EditText
                android:id="@+id/signInPwd"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/edit_text_background"
                android:drawableEnd="@drawable/ic_padlock"
                android:drawablePadding="8dp"
                android:hint="@string/hint_pw"
                android:autofillHints="Password"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"

                android:textColor="#FFFFFF"
                android:textColorHint="@color/whiteTrans"
                android:textSize="20sp"
                android:inputType="textPassword"

                app:autoSizeMaxTextSize="24sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                android:fontFamily="@font/roboto_regular"


                android:layout_marginTop="160dp"
                app:layout_constraintWidth_max="450dp"/>

            <TextView
                android:id="@+id/textSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:fontFamily="@font/roboto_regular"

                android:textSize="20sp"
                android:letterSpacing="0.05"
                android:textColor="@color/white"
                android:textStyle="bold"

                android:layout_marginTop="40dp"
                app:layout_constraintWidth_max="450dp"
                />

            <TextView
                android:id="@+id/textPromptRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_time_connecting_to_your_device"
                android:fontFamily="@font/roboto_regular"

                android:textSize="15sp"
                android:letterSpacing="0.02"
                android:textColor="@color/white"
                android:textAlignment="center"

                android:layout_marginTop="350dp"
                app:layout_constraintWidth_max="450dp"
                />

            <TextView
                android:id="@+id/signInRegRedirect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:fontFamily="@font/roboto_regular"

                android:textSize="15sp"
                android:letterSpacing="0.02"
                android:textColor="@color/blue"
                android:textAlignment="center"

                android:layout_marginTop="375dp"
                app:layout_constraintWidth_max="450dp"
                />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>