<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background = "@drawable/gradient"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Horizontal Guidelines for left and right padding -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9002433" />

        <!-- Vertical Guidelines for top and bottom padding -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_image_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="180dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_form_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="700dp" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guideline_image_bottom"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintVertical_bias="0.16"
            >

            <!-- Image on Top -->
            <ImageView
                android:contentDescription="@string/guardian_call_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="20dp"
                android:src="@drawable/logo_no_background" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="500dp"
            app:layout_constraintTop_toTopOf="@id/guideline_image_bottom"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintWidth_max="400dp">

            <TextView
                android:id="@+id/textRegisterInRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily="@font/roboto_regular"

                android:letterSpacing="0.05"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="20sp"

                android:textStyle="bold"
                android:layout_marginTop="25dp"
                app:layout_constraintWidth_max="450dp" />

            <EditText
                android:id="@+id/registerEmail"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/edit_text_background"
                android:drawableEnd="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:hint="@string/enter_email"
                android:autofillHints="emailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"

                android:textColor="#FFFFFF"
                android:textColorHint="@color/whiteTrans"
                android:textSize="20sp"
                android:inputType="textEmailAddress"

                app:autoSizeMaxTextSize="24sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                android:fontFamily="@font/roboto_regular"

                android:layout_marginTop="90dp"
                app:layout_constraintWidth_max="450dp"/>

            <EditText
                android:id="@+id/registerPwd"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/edit_text_background"
                android:drawableEnd="@drawable/ic_padlock"
                android:drawablePadding="8dp"
                android:hint="@string/enter_password"
                android:autofillHints="emailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"

                android:textColor="#FFFFFF"
                android:textColorHint="@color/whiteTrans"
                android:textSize="20sp"
                android:inputType="textPassword"

                app:autoSizeMaxTextSize="24sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                android:fontFamily="@font/roboto_regular"

                android:layout_marginTop="170dp"
                app:layout_constraintWidth_max="450dp"/>

            <EditText
                android:id="@+id/registerConfPwd"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/edit_text_background"
                android:drawableEnd="@drawable/ic_padlock"
                android:drawablePadding="8dp"
                android:hint="@string/confirm_password"
                android:autofillHints="emailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"

                android:textColor="#FFFFFF"
                android:textColorHint="@color/whiteTrans"
                android:textSize="20sp"
                android:inputType="textPassword"

                app:autoSizeMaxTextSize="24sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                android:fontFamily="@font/roboto_regular"

                android:layout_marginTop="250dp"
                app:layout_constraintWidth_max="450dp"/>

            <EditText
                android:id="@+id/registerDeviceID"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/edit_text_background"
                android:drawableEnd="@drawable/ic_device"
                android:drawablePadding="8dp"
                android:hint="@string/enter_device_id"
                android:autofillHints="emailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="13dp"

                android:textColor="#FFFFFF"
                android:textColorHint="@color/whiteTrans"
                android:textSize="20sp"
                android:inputType="number"

                app:autoSizeMaxTextSize="24sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                android:fontFamily="@font/roboto_regular"

                android:layout_marginTop="330dp"
                app:layout_constraintWidth_max="450dp"/>

            <EditText
                android:id="@+id/registerSecretkey"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/edit_text_background"
                android:drawableEnd="@drawable/ic_key"
                android:drawablePadding="8dp"
                android:hint="@string/enter_secret_key"
                android:autofillHints="emailAddress"
                android:paddingStart="16dp"
                android:paddingEnd="13dp"

                android:textColor="#FFFFFF"
                android:textColorHint="@color/whiteTrans"
                android:textSize="20sp"
                android:inputType="text"

                app:autoSizeMaxTextSize="24sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                android:fontFamily="@font/roboto_regular"

                android:layout_marginTop="410dp"
                app:layout_constraintWidth_max="450dp"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="150dp"
            app:layout_constraintTop_toTopOf="@id/guideline_form_bottom"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintWidth_max="400dp">

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/rounded_button_auth"
            android:maxWidth="300dp"
            android:maxHeight="100dp"
            android:text="@string/register"
            android:textColor="#FFFFFF"

            app:autoSizeMaxTextSize="24sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform"

            android:layout_marginTop="10dp"
            app:layout_constraintWidth_max="400dp"
            />

        <TextView
            android:id="@+id/textPromptSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:fontFamily="@font/roboto_regular"

            android:textSize="15sp"
            android:letterSpacing="0.02"
            android:textColor="@color/white"

            android:layout_marginTop="90dp"
            android:textAlignment="center"
            app:layout_constraintWidth_max="450dp"
            />

        <TextView
            android:id="@+id/signInRedirectText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:fontFamily="@font/roboto_regular"

            android:textSize="15sp"
            android:letterSpacing="0.02"
            android:textColor="@color/blue"

            android:layout_marginTop="110dp"
            android:textAlignment="center"
            app:layout_constraintWidth_max="450dp"
            />
        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>