<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@drawable/gradient"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Horizontal Guidelines for left and right padding -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.12" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.88" />


        <TextView
            android:id = "@+id/backIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:drawableEnd="@drawable/ic_back"
            android:layout_marginBottom="70dp"

            app:layout_constraintEnd_toStartOf="@id/registeredUsersPrompt"
            app:layout_constraintBottom_toBottomOf="@id/registeredUsersPrompt"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_device_white"
            app:layout_constraintEnd_toStartOf="@id/registeredUsersPrompt"
            app:layout_constraintBottom_toBottomOf="@id/registeredUsersPrompt"/>

        <TextView
            android:id="@+id/registeredUsersPrompt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/roboto_regular"
            android:letterSpacing="0.05"
            android:text="@string/users_registered_for_this_device"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintWidth_max="450dp" />

        <Button
            android:id="@+id/removeButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@drawable/rounded_button_red"
            android:maxWidth="300dp"
            android:maxHeight="100dp"
            android:text="@string/remove"
            android:textColor="#FFFFFF"
            app:autoSizeMaxTextSize="24sp"
            app:autoSizeMinTextSize="14sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"

            app:layout_constraintEnd_toEndOf="@id/registeredUsersPrompt"
            app:layout_constraintTop_toBottomOf="@id/registeredUsersPrompt"
            app:layout_constraintWidth_max="400dp" />

        <LinearLayout
            android:id = "@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/removeButton"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            android:layout_marginTop="10dp"
            android:orientation="vertical"/>





        <Button
            android:id="@+id/logOutButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded_button_red"
            android:maxWidth="300dp"
            android:maxHeight="100dp"
            android:text="@string/log_out"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/monospace"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="24sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform"
            android:layout_marginTop="190dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@id/deviceId"
            app:layout_constraintWidth_max="400dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_forward"
            app:layout_constraintEnd_toStartOf="@id/alarmMsgPrompt"
            app:layout_constraintBottom_toBottomOf="@id/alarmMsgPrompt"/>

        <TextView
            android:id="@+id/alarmMsgPrompt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_regular"
            android:letterSpacing="0.05"
            android:text="@string/device_id"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/linearLayout"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintWidth_max="450dp" />

        <TextView
            android:id="@+id/deviceId"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/text_box_border"
            android:text="100000000"
            android:gravity="center_vertical"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/alarmMsgPrompt"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintWidth_max="450dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
